--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,13 @@
 
 body {
     /* font-family: agrega tipografia*/
-    font-family: "Roboto";
-    font-size: 13px;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    color: #333;
+    background-color: #f9f9f9;
+    padding: 20px;
+    background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.2) 50%, rgba(255, 255, 255, 0.2) 75%, transparent 75%, transparent);
+    background-size: 40px 40px;
 }
 
 
