--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,11 @@ header .container .hamb {
         transform: translateX(0);
     }
 }
+/* Agregar transición al menú */
+header .container nav {
+    transition: transform 0.4s ease;
+}
+
 
 
 footer {
